test/invalid-semantic/56311_assigning_value_different_type/assigning_value_different_type.agu
-- Author: tcomp56311, João Vedor

-- Semantic Problem

let x : Int = true

-- Error: Cannot assign Bool to Int